Resolved the issue - The relatively positioned sidebar overlaps on main content on small device screens - Issue - #27

--- a/style.css
+++ b/style.css
@@ -852,11 +852,13 @@ body .label {
 }
 
 /* Layout */
-.side-pull-left #primary{
-    float: left;
-}
-.side-pull-right #primary{
-    float: right;
+@media (min-width: 992px) {
+	.side-pull-left #primary{
+		float: left;
+	}
+	.side-pull-right #primary{
+		float: right;
+	}
 }
 .no-sidebar #secondary, .full-width #secondary{
     display: none;
